--- a/HalloDocWeb/Views/Admin/Admindashboard.cshtml
+++ b/HalloDocWeb/Views/Admin/Admindashboard.cshtml
@@ -272,7 +272,7 @@
     </div>
 </div>
 @* </div> *@
-<footer class="text-center justify-content-center bg-secondary position-fixed w-100 bottom-0">
+<footer class="text-center justify-content-center bg-secondary position-fixed w-100 bottom-0 " style="z-index:10;">
     <div class="">Terms Of Conditions <div class="vr "></div> Privacy Policy</div>
 </footer>
 <!-- Modal -->
