--- a/HalloDocWeb/Views/Admin/EditPhysicianAccount.cshtml
+++ b/HalloDocWeb/Views/Admin/EditPhysicianAccount.cshtml
@@ -56,58 +56,62 @@
                         <button class="btn btn-white text-info border-info" type="button">Reset password</button>
                     </div>
                 </form>
-                <form  id="enable" >
-                    @* <input type="hidden" asp-for=admin.Adminid value="@Model.admin.Adminid" /> *@
+                <form asp-action="SavePhysicianInfo" asp-controller="Admin" id="enable">
+                    <input type="hidden" asp-for=PhysicianId value="@Model.PhysicianId" />
                     <div class="row">
                         <div class="col-12 h5 mb-3">
                             Physician Information
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Firstname type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname" disabled>
+                            <input asp-for=Firstname value="@Model.Firstname" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Firstname" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Firstname</label>
                             <span class="text-danger"></span>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Lastname type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname" disabled>
+                            <input asp-for=Lastname value="@Model.Lastname" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Lastname</label>
                             <span class="text-danger"></span>
                         </div>
                         <div  class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Email type ="email" class="form-control" id="email" placeholder="Email" disabled>
+                            <input asp-for=Email value="@Model.Email" type ="email" class="form-control" id="email" placeholder="Email" disabled>
                             <label for="email" class="form-label ps-4">Email</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Mobile id="phone" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
+                            <input asp-for=Mobile value="@Model.Mobile" id="phone" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Medicallicense type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname" disabled>
+                            <input asp-for=Medicallicense value="@Model.Medicallicense" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Lastname" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Medical Licence</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Npinumber type ="text" class="form-control" id="exampleFormControlInput1" placeholder="NPI Number" disabled>
+                            <input asp-for=Npinumber value="@Model.Npinumber" type ="text" class="form-control" id="exampleFormControlInput1" placeholder="NPI Number" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">NPI Number</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Syncemailaddress type="email" class="form-control" id="exampleFormControlInput1" placeholder="Synchronization Email Address" disabled>
+                            <input asp-for=Syncemailaddress value="@Model.Syncemailaddress" type="email" class="form-control" id="exampleFormControlInput1" placeholder="Synchronization Email Address" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Synchronization Email Address</label>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-xl-6">
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1" disabled>
-                                <label class="form-check-label" for="inlineCheckbox1">District Of Columbia</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2" disabled>
-                                <label class="form-check-label" for="inlineCheckbox2">New York</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3" disabled>
-                                <label class="form-check-label" for="inlineCheckbox3">Virginia</label>
-                            </div>
-                            <div class="form-check form-check-inline">
-                                <input class="form-check-input" type="checkbox" id="inlineCheckbox4" value="option4" disabled>
-                                <label class="form-check-label" for="inlineCheckbox4">Maryland</label>
-                            </div>
+                        <div class="col-sm-12 col-md-6 col-xl-6 mb-3 text-muted">
+                            @if (Model.regions != null)
+                            {
+                                @foreach (var item in Model.regions)
+                                {
+                                    @if (Model.physicianregion.Any(x => x.Regionid == item.Regionid))
+                                    {
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input checkboxes" type="checkbox" name="SelectedReg" value="@item.Regionid" checked disabled>
+                                            <label class="form-check-label text6" for="inlineCheckbox1">@item.Name</label>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <div class="form-check form-check-inline">
+                                            <input class="form-check-input checkboxes" type="checkbox" name="SelectedReg" value="@item.Regionid" disabled>
+                                            <label class="form-check-label text6" for="inlineCheckbox1">@item.Name</label>
+                                        </div>
+                                    }
+                                }
+                            }
                         </div>
                     </div>
                     <div class="text-end pb-3">
@@ -117,22 +121,22 @@
                         <button class="btn btn-white text-info border-info" onclick="disableData1()" id="cancel" type="button" style="display:none;">Cancel</button>
                     </div>
                 </form>
-                <form  id="enable1">
-                    @* <input type="hidden" asp-for=admin.Adminid value="@Model.admin.Adminid" /> *@
+                <form asp-action="SavePhysicianBillingInfo" asp-controller="Admin" id="enable1">
+                    <input type="hidden" asp-for=PhysicianId value="@Model.PhysicianId" />
                     <div class="row">
                         <div class="col-12 h5 mb-3">
                             Mailing & Billing Information
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Address1 type="text" class="form-control" id="Address-1" placeholder="Address 1" disabled>
+                            <input asp-for=Address1 value="@Model.Address1" type="text" class="form-control" id="Address-1" placeholder="Address 1" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Address 1</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Address2 type="text" class="form-control" id="Address-2" placeholder="Address 2" disabled>
+                            <input asp-for=Address2 value="@Model.Address2" type="text" class="form-control" id="Address-2" placeholder="Address 2" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Address 2</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6  form-floating mb-3 text-muted">
-                            <input asp-for=City type="text" class="form-control" id="city" placeholder="City" disabled>
+                            <input asp-for=City type="text" value="@Model.City" class="form-control" id="city" placeholder="City" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">City</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6  form-floating mb-3 text-muted">
@@ -140,11 +144,11 @@
                             <label for="exampleFormControlInput1" class="form-label ps-4">State</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6  form-floating mb-3 text-muted">
-                            <input asp-for=Zip type="text" class="form-control" id="zipcode" placeholder="Zip Code" disabled>
+                            <input asp-for=Zip type="text" value="@Model.Zip" class="form-control" id="zipcode" placeholder="Zip Code" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Zip Code</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Altphone id="phone1" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
+                            <input asp-for=Altphone value="@Model.Altphone" id="phone1" class="form-control inp2" type="tel" placeholder="Phone Number" disabled>
                         </div>
                     </div>
                     <div class="text-end pb-3">
@@ -160,11 +164,11 @@
                             Provider Profile
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Businessname type ="text" class="form-control" id="Address-1" placeholder="Business Name" disabled>
+                            <input asp-for=Businessname value="@Model.Businessname" type ="text" class="form-control" id="Address-1" placeholder="Business Name" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Business Name</label>
                         </div>
                         <div class="col-sm-12 col-md-6 col-xl-6 form-floating mb-3 text-muted">
-                            <input asp-for=Businesswebsite type="text" class="form-control" id="Address-2" placeholder="Business Website" disabled>
+                            <input asp-for=Businesswebsite value="@Model.Businesswebsite" type="text" class="form-control" id="Address-2" placeholder="Business Website" disabled>
                             <label for="exampleFormControlInput1" class="form-label ps-4">Business Website</label>
                         </div>
                         <fieldset id="upload" class="col-sm-12 col-md-6 col-lg-6 col-xl-6">
@@ -198,7 +202,7 @@
                             </button>
                         </div>
                         <div class="form-floating mb-3">
-                            <textarea class="form-control" asp-for=Adminnotes placeholder="Admin Notes" id="floatingTextarea2" style="height: 100px" disabled></textarea>
+                            <textarea class="form-control" asp-for=Adminnotes placeholder="Admin Notes" id="floatingTextarea2" style="height: 100px" disabled>@Model.Adminnotes</textarea>
                             <label for="floatingTextarea2" class="ps-4">Admin Notes</label>
                         </div>
                     </div>
