--- a/HalloDocWeb/Views/Home/patientlogin.cshtml
+++ b/HalloDocWeb/Views/Home/patientlogin.cshtml
@@ -4,84 +4,68 @@
 
 }
 <div class="min-vh-100 min-vw-100 bg1" id="light-theme"></div>
-<div class="container d-flex align-items-center backimage justify-content-center min-vh-100">
-    <div class="row justify-content-center text-center ">
+<div class="container  align-items-lg-center backimage justify-content-center min-vh-100">
+    <div class="row d-flex justify-content-center text-center ">
         <div class="col setmoon">
-            <div class="row">
-                <div class="col text-end ">
-                    <button class="moonbtn backtra"><i class="fa-solid fa-moon  "></i></button>
-                </div>
-            </div>
+
+            <button class="moonbtn backtra"><i class="fa-solid fa-moon  "></i></button>
+
         </div>
-        <div class="row setlogo"> 
-            <div class="col">
-                <img src="~/OneDrive_2024-01-17/SRS Screen Shorts/backremovelogo.png" class="img-fluid mb-4" alt="logo">
-            </div>
+
+        <div class="col-12">
+            <img src="~/OneDrive_2024-01-17/SRS Screen Shorts/backremovelogo.png" class="img-fluid mb-4" alt="logo">
         </div>
-        <div class="d-flex flex-column align-items-center">
-            <div class="row w-50 mt-4 text-muted mb-5 d-flex">
-                <a class="col text-start text-info text-decoration-none " asp-controller="Home" asp-action="Index">
-                    <i class="fa-solid fa-less-than"></i> Back
-                </a>
-            </div>
-            <div class="row h2 w-50">
-                <div class="col mb-3">
-                    Login To Your Account
-                </div>
-            </div>
+
+        <div class="col-sm-12 col-md-6  text-start mt-5">
+
+            <a class=" text-start text-info text-decoration-none w-50" asp-controller="Home" asp-action="Index">
+                <i class="fa-solid fa-less-than"></i> Back
+            </a>
         </div>
-       @*  <form asp-controller="Logins" asp-action="Create" class="w-50 text-center">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <input asp-for="Username" class="form-control text-muted backtra border-info " />
-                <label asp-for="Username" class="control-label">UserName</label>
-            </div>
-            <div class="form-group">
-                
-                <input asp-for="Password" class="form-control text-muted backtra border-info " id="floatingPassword" />
-                <label asp-for="Password" for="floatingPassword" class="control-label">Password</label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
-            </div>
-            <div class="row-sm-10 mt-4 text-muted mb-5">
-                <a class="col text-center text-info text-decoration-none " asp-controller="Home" asp-action="patientforgot">
-                    Forgot Password?
-                </a>
-            </div>
-        </form> *@
-        <form class="w-50 text-center" asp-action="patientlogin" method="post">
-            <div class="text-danger"></div>
-             <div class=" form-floating mb-3 form-group ">
+
+        <div class="col-sm-12 col-md-12  mb-5 mt-5 h2">
+            Login To Your Account
+        </div>
+
+
+    </div>
+
+    <form class=" " asp-action="patientlogin" method="post">
+        <div class="row justify-content-center ">
+            <div class=" col-sm-12 col-md-6 form-floating mb-3 form-group ">
                 <input asp-for="Email" type="text" class="form-control text-muted backtra border-info " id="floatingInput"
-                       placeholder="Username"/>
-                <label asp-for="Email" class=" " for="floatingInput">
+                       placeholder="Username" />
+                <label asp-for="Email" class="ps-4" for="floatingInput">
                     Email
                 </label>
-                <span asp-validation-for="Email" class="text-danger text-start"></span>
+                <span asp-validation-for="Email" class="text-danger w-100 justify-content-start" style="text-align:start !important">
+                   
+                </span>
                 <i class="far fa-user-circle text-secondary faicon"></i>
-            </div> 
-            <div class="form-floating mb-3">
-                <input asp-for="Passwordhash" type="password" id="myInput"  class="form-control backtra border-info text-muted" id="floatingPassword"
+            </div>
+        </div>
+        <div class="row justify-content-center  ">
+            <div class="col-sm-12 col-md-6 form-floating mb-3">
+                <input asp-for="Passwordhash" type="password" id="myInput" class="form-control backtra border-info text-muted" id="floatingPassword"
                        placeholder="Password">
-                <label asp-for="Passwordhash" for="floatingPassword">Password</label>
+                <label asp-for="Passwordhash" class="ps-4" for="floatingPassword">Password</label>
                 <span asp-validation-for="Passwordhash" class="text-danger text-start"></span>
                 <i class="far fa-eye text-secondary faicon" style="display:none" id="showeye" onclick="myFunction()"></i>
                 <i class="fa-solid fa-eye-slash faicon text-secondary" id="hideeye" style="display:block" onclick="myFunction()"></i>
-           </div>
-            <div class="row justify-content-between mt-4">
-                <div class="col">
-                    <button type="Submit" class="btn btn-info w-100">Login</button>
-                </div>
             </div>
-            <div class="row-sm-10 mt-4 text-muted mb-5">
-                <a class="col text-center text-info text-decoration-none " asp-controller="Home" asp-action="patientforgot">
-                    Forgot Password?    
-                </a>
+        </div>
+        <div class="row justify-content-center text-center mt-4">
+            <div class="col-sm-12 col-md-6">
+                <button type="Submit" class="btn btn-info text-light w-100 "><strong>Login</strong></button>
             </div>
-        </form> 
-
-    </div>
+        </div>
+        <div class="row-sm-10 mt-4 text-muted text-center mb-5">
+            <a class="col text-info text-decoration-none " asp-controller="Home" asp-action="patientforgot">
+                Forgot Password?
+            </a>
+        </div>
+    </form>
+</div>
 </div>
 <footer class="footerset text-lg-center text-center justify-content-center">
     <div class="">Terms Of Conditions <div class="vr fw-bold"></div> Privacy Policy</div>
@@ -99,8 +83,10 @@
             document.getElementById('showeye').style.display = 'none';
         }
     }
-    
+
 </script>
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
